--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-router": "^1.114.29",
+    "@types/node": "^22.13.14",
     "axios": "^1.8.4",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^4.3.1",
+    "eslint-plugin-import": "^2.31.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zustand": "^5.0.3"
