--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-router": "^1.114.29",
     "@types/node": "^22.13.14",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^4.3.1",
     "eslint-plugin-import": "^2.31.0",
