feat: install remotion and adjust shadcn lib folder

--- a/components.json
+++ b/components.json
@@ -14,7 +14,7 @@
     "components": "@/component",
     "utils": "@/lib/util",
     "ui": "@/component/ui",
-    "lib": "@/lib",
+    "lib": "@/lib/shadcn",
     "hooks": "@/hook"
   },
   "iconLibrary": "lucide"
