feat: add context

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^4.3.1",
     "eslint-plugin-import": "^2.31.0",
+    "immer": "^10.1.1",
     "lint-staged": "^15.5.0",
     "lucide-react": "^0.487.0",
+    "moveable": "^0.53.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "remotion": "4.0.286",
