--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "eslint-plugin-import": "^2.31.0",
     "immer": "^10.1.1",
     "lint-staged": "^15.5.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "moveable": "^0.53.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "remotion": "4.0.286",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
@@ -51,6 +53,7 @@
     "@remotion/eslint-plugin": "^4.0.286",
     "@tanstack/react-router-devtools": "^1.114.29",
     "@tanstack/router-plugin": "^1.114.30",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
