--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@locator/babel-jsx": "^0.4.4",
     "@remotion/eslint-plugin": "^4.0.286",
     "@tanstack/react-router-devtools": "^1.114.29",
     "@tanstack/router-plugin": "^1.114.30",
