--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
+    "use-zustand": "^0.2.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
