--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "remotion-studio": "remotion studio ./src/lib/remotion/index.ts --no-open"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": ["prettier --write", "eslint --fix"]
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
@@ -61,10 +61,12 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "prettier": "3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
