--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@remotion/eslint-plugin": "^4.0.286",
     "@tanstack/react-router-devtools": "^1.114.29",
     "@tanstack/router-plugin": "^1.114.30",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
